<resources>
    <string name="app_name">ABDM App</string>
    <string name="BENF_MOB_NUM">Beneficiary Mobile Number</string>
    <string name="BENF_ADHR_NUM">Beneficiary Aadhaar Number</string>
    <string name="VERIFY">Verify</string>
    <string name="START_VERIFICATION">Start Verification</string>
    <string name="VERIFY_OTP">Verify OTP</string>
    <string name="GEN_OTP">Generate OTP</string>
    <string name="start_auth">Start Auth</string>

    <string name="RESEND_OTP">Resend OTP</string>
    <string name="ENTER_ADHR_OTP">Enter Aadhaar OTP</string>
    <string name="ENTER_MOBILE_OTP">Enter Mobile OTP</string>
    <string name="ENTER_OTP">Enter  OTP</string>
    <string name="USE_ADHR_DATA_IN_COMMCARE">Use Aadhaar data in Commcare</string>
    <string name="ADHR_DATA">Aadhaar Data</string>
    <string name="ABHA_NUM">ABHA Number</string>
    <string name="RETURN">Return</string>
    <string name="STATUS">Status</string>
    <string name="VERIFICATION_STATUS">Verification Status</string>
    <string name="SEL_AUTH_METHOD">Select auth method</string>
    <string name="ABHA_VERIFICATION">ABHA Verification</string>
    <string name="ABHA_CREATION">ABHA Creation</string>
    <string name="healthIdNumber">Health ID Number</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="yearOfBirth">Year of Birth</string>
    <string name="monthOfBirth">Month of Birth</string>
    <string name="dayOfBirth">Day of Birth</string>
    <string name="firstName">First Name</string>
    <string name="healthId">Health ID</string>
    <string name="lastName">Last Name</string>
    <string name="middleName">Middle Name</string>
    <string name="stateCode">State Code</string>
    <string name="districtCode">District Code</string>
    <string name="stateName">State Name</string>
    <string name="districtName">District Name</string>
    <string name="email">Email Address</string>
    <string name="kycPhoto">KYC Photo</string>
    <string name="profilePhoto">Profile Photo</string>
    <string name="mobile">Mobile Number</string>
    <string name="authMethods">Authenication Methods</string>
    <string name="pincode">Pin Code</string>
    <string name="AADHAAR_OTP">Aadhar OTP</string>
    <string name="MOBILE_OTP">Mobile OTP</string>
    <string name="USER_ABORTED">Aborted by user</string>

    <string name="beneficiaryMobileNumber">Beneficiary Mobile Number</string>
    <string name="beneficiaryAadharNumber">Beneficiary Aadhaar Number</string>
    <string name="enter_mobile_otp">Enter Mobile OTP</string>
    <string name="enter_aadhaar_otp">Enter Aadhaar OTP</string>
    <string name="verify">Verify</string>
    <string name="ben_mobile_num">Beneficiary Mobile Number</string>
    <string name="ben_aadhar_num">Beneficiary Aadhaar Number</string>
    <string name="ben_abha_num">Beneficiary ABHA </string>
    <string name="gen_otp">Generate OTP</string>
    <string name="resent_otp">Resend OTP</string>
    <string name="abha_creation">ABHA Creation</string>
    <string name="returnn">Return</string>
    <string name="adhar_consent">Use Aadhaar data in Commcare</string>
    <string name="abha_num">ABHA</string>
    <string name="abha_number">ABHA No.</string>
    <string name="aadhar_data">Aadhaar Data</string>
    <string name="start_verification">Start Verification</string>
    <string name="select_auth">Select auth method</string>
    <string name="verification_status">Verification Status</string>
    <string name="status">Status</string>
    <string name="abha_verification">ABHA verification</string>
    <string name="mobile_start_number">Should start with 6,7,8 or 9</string>
    <string name="cancel">Cancel</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="ok">Ok</string>
    <string name="app_blocked">OTP request blocked for %s.</string>
    <string name="close">Close</string>
    <string name="disclaimer">
I, hereby declare that I am voluntarily sharing my Aadhaar Number and demographic information issued by UIDAI, with National Health Authority (NHA) for the sole purpose of creation of ABHA number . I understand that my ABHA number can be used and shared for purposes as may be notified by ABDM from time to time including provision of healthcare services. Further, I am aware that my personal identifiable information (Name, Address, Age, Date of Birth, Gender and Photograph) may be made available to the entities working in the National Digital Health Ecosystem (NDHE) which inter alia includes stakeholders and entities such as healthcare professionals (e.g. doctors), facilities (e.g. hospitals, laboratories) and data fiduciaries (e.g. health programmes), which are registered with or linked to the Ayushman Bharat Digital Mission (ABDM), and various processes there under. I authorize NHA to use my Aadhaar number for performing Aadhaar based authentication with UIDAI as per the provisions of the Aadhaar (Targeted Delivery of Financial and other Subsidies, Benefits and Services) Act, 2016 for the aforesaid purpose. I understand that UIDAI will share my e-KYC details, or response of “Yes” with NHA upon successful authentication. I have been duly informed about the option of using other IDs apart from Aadhaar; however, I consciously choose to use the Aadhaar number for the purpose of availing benefits across the NDHE. I am aware that my personal identifiable information excluding Aadhaar number / VID number can be used and shared for purposes as mentioned above. I reserve the right to revoke the given consent at any point of time as per provisions of Aadhaar Act and Regulations
    </string>
    <string name="tnc">Beneficiary Consent</string>
    <string name="validate">Validate</string>
    <string name="checkABHA">Check ABHA</string>
    <string name="note">Note:</string>
    <string name="check_abha_note">ABHA input is optional while creating a new ABHA. When left blank, an auto generated ABHA will be created.
Please fill this field if the beneficiary is interested in a custom ABHA address.\n\n
        1. Minimum length - 8 characters.\n
2. Maximum length - 18 characters.\n
3. Special characters allowed - 1 dot (.) and/or 1 underscore (_).\n
4. Special character dot and underscore should be in between. Special characters cannot be in the beginning or at the end.\n
5. Alphanumeric - only numbers, only letters or any combination of numbers and letters is allowed.\n

    </string>


    <string name="ABHA_IN_USE">ABHA address already in use.</string>
    <string name="abha_to_check">Enter ABHA to check</string>
    <string name="custom_abha_suffix">\@abdm</string>
    <string name="i_agree">I Agree</string>
    <string name="skip">Skip</string>

    <string name="start_scan">Start ABHA scan</string>
    <string name="SCAN_ABHA_BENF_MSG">Scan ABHA card of the beneficiary</string>
    <string name="detailsCaptured">Details Captured :</string>
    <string name="abhAddress">ABHA address</string>
    <string name="dateOfBirth">DOB</string>
    <string name="scanAbha">Scan ABHA</string>
    <string name="scanAbhaErrorMsg">Not an ABHA code</string>
    <string name="permission_camera_rationale_msg">Camera permission was declined. Please go to application setting and provide the CAMERA permission</string>

    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="purpose">Purpose</string>
    <string name="patientId">Patient Id</string>
    <string name="hiTypes">HI Types</string>
    <string name="prescription">Prescription</string>
    <string name="diagnosticReport">Diagnostic Report</string>
    <string name="opConsultation">OP Consultation</string>
    <string name="dischargeSummary">Discharge Summary</string>
    <string name="immunizationRecord">Immunization Record</string>
    <string name="recordArtifact">Record Artifact</string>
    <string name="wellnessRecord">Wellness Record\n</string>
    <string name="addHiType">+ Add Hi Type</string>
    <string name="hipId">HIP ID</string>
    <string name="hiuId">HIU ID</string>
    <string name="requester">Requester</string>
    <string name="requesterName">Requester Name</string>
    <string name="identifier">Identifier</string>
    <string name="type">Type</string>
    <string name="value">Value</string>
    <string name="system">System</string>
    <string name="permission">Permission</string>
    <string name="accessMode">Access Mode</string>
    <string name="dateRange">Consent Date Range</string>
    <string name="startDate">From Date</string>
    <string name="endDate">To Date</string>
    <string name="expiryDate">Expiry Date</string>
    <string name="select_time">Select Time</string>
    <string name="create_consent">Create Consent</string>
    <string name="healthInfo">Health Info</string>
    <string name="helthInfoType">Health Info Type</string>
    <string name="healthInfoType">FHIR Data</string>
    <string name="patient_consent">Patient Consents</string>
    <string name="filter">Filter</string>
    <string name="searchText">Enter text to search</string>
    <string name="search">Search</string>
    <string name="clear">Reset</string>
    <string name="searchFilters">Search Filters</string>
    <string name="dateSelectionFailed">Date selection failed</string>
    <string name="retry">Retry</string>
    <string name="loadErrorMsg">Unable to load data. Please retry.</string>
    <string name="refresh">Reresh</string>
    <string name="noData">No data found.</string>
    <string name="loading">Loading...</string>
    <string name="artefact_detail">Artefact Detail</string>
    <string name="hipName">HIP Name</string>
    <string name="careContexts">Care Contexts</string>
    <string name="notGrantedMsg">Status is not \"GRANTED\"</string>
    <string name="artefats">Artefacts</string>
    <string name="get_health_data">HEALTH DATA</string>
    <string name="content">Content</string>
    <string name="healthData">Health Data</string>
    <string name="linkCareContext">Link Care Context</string>
    <string name="linkCCDetails">Link ContextCare details</string>
    <string name="patietDetails">Patient Details</string>
    <string name="referenceNum">Reference Number</string>
    <string name="display">Display</string>
    <string name="ccDetails">CareContext Detail</string>
    <string name="linking_cc">Linking context care...</string>
    <string name="retryLink">Link Context Care</string>
    <string name="linking_cc_success">Context care linked successfully.</string>
    <string name="linking_cc_error">Context care not linked.</string>
    <string name="cc_not_linked">NOT LINKED</string>
    <string name="scanAbhaResult">ABHA Details</string>
    <string name="place_barcode_inside">Place barcode at the center of the screen.</string>
    <string name="back">Back</string>
    <string name="notifyPatient">Notify Patient</string>
    <string name="phone">Phone No.</string>
    <string name="creation_date">Creation Date</string>
    <string name="granted_date">Granted Date</string>
    <string name="patient_name">Patient Name</string>
    <string name="no_health_data_available">No health record available</string>

    <string name="demographics">Demographics</string>
    <string name="abha_address">ABHA Address</string>
    <string name="age">Age</string>
</resources>