<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
  >

    <data class="VerifyMobileOtpBinding">
        <import type="org.commcare.dalvik.domain.model.TranslationKey"/>

        <variable
            name="model"
            type="org.commcare.dalvik.abha.viewmodel.AbdmViewModel" />

        <variable
            name="clickHandler"
            type="org.commcare.dalvik.abha.ui.main.fragment.VerifyMobileOtpFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otpInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="clear_text"
            app:helperTextEnabled="true"
            android:hint="@string/ENTER_MOBILE_OTP"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileOtpEt"
                style="@style/EditTextStyle"
                android:maxLength="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ENTER_MOBILE_OTP"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guidelineMargin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/guidelineMargin" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/resentOtpContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/otpInputLayout">

            <org.commcare.dalvik.abha.ui.main.custom.TimeProgressBar
                android:id="@+id/timeProgress"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/resentOtp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/resentOtp"
                style="@style/RoundStyleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:onClickListener="@{clickHandler}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/timeProgress"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/RESEND_OTP"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>




        <Button
            android:id="@+id/verifyOtp"
            style="@style/RoundStyleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginTop="@dimen/_16dp"
            android:onClickListener="@{clickHandler}"
            android:text="@string/VERIFY"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/resentOtpContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>